[gd_scene load_steps=22 format=1]

[ext_resource path="res://tennis.gd" type="Script" id=1]
[ext_resource path="res://tiles.tres" type="TileSet" id=2]
[ext_resource path="res://net.tex" type="Texture" id=3]
[ext_resource path="res://racket.tscn" type="PackedScene" id=4]
[ext_resource path="res://ComputerSpeak.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://arrow.tex" type="Texture" id=6]
[ext_resource path="res://ball.tex" type="Texture" id=7]
[ext_resource path="res://racket.smp" type="Sample" id=8]
[ext_resource path="res://score.smp" type="Sample" id=9]
[ext_resource path="res://wall.smp" type="Sample" id=10]
[ext_resource path="res://music.ogg" type="AudioStream" id=11]

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 4.0
height = 122.0

[sub_resource type="ConvexPolygonShape2D" id=11]

custom_solver_bias = 0.0
points = Vector2Array( -30, -140, 0, -140, 0, 400, -30, 420 )

[sub_resource type="ConvexPolygonShape2D" id=12]

custom_solver_bias = 0.0
points = Vector2Array( 630, 420, -30, 420, 0, 400, 600, 400 )

[sub_resource type="ConvexPolygonShape2D" id=13]

custom_solver_bias = 0.0
points = Vector2Array( 630, -140, 630, 420, 600, 400, 600, -140 )

[sub_resource type="RectangleShape2D" id=5]

custom_solver_bias = 0.0
extents = Vector2( 660, 10 )

[sub_resource type="ConvexPolygonShape2D" id=6]

custom_solver_bias = 0.0
points = Vector2Array( 300, 380, 600, 380, 600, 400, 300, 400 )

[sub_resource type="ConvexPolygonShape2D" id=7]

custom_solver_bias = 0.0
points = Vector2Array( 0, 380, 300, 380, 300, 400, 0, 400 )

[sub_resource type="DynamicFont" id=8]

font/size = 20
font/use_mipmaps = true
font/use_filter = true
font/font = ExtResource( 5 )

[sub_resource type="SampleLibrary" id=9]

samples/racket = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 8 )
}
samples/score = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 9 )
}
samples/wall = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 10 )
}

[sub_resource type="CircleShape2D" id=10]

custom_solver_bias = 0.0
radius = 16.0

[node name="tennis" type="Node"]

process/pause_mode = 2
script/script = ExtResource( 1 )

[node name="background" type="Node2D" parent="."]

process/pause_mode = 1
editor/display_folded = true

[node name="wall" type="TileMap" parent="background"]

transform/pos = Vector2( -4, 0 )
mode = 0
tile_set = ExtResource( 2 )
cell/size = Vector2( 32, 32 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( -1, 0, -65536, 0, -65535, 0, -65534, 0, -65533, 7, -65532, 7, -65531, 7, -65530, 7, -65529, 7, -65528, 7, -65527, 7, -65526, 7, -65525, 7, -65524, 7, -65523, 7, -65522, 7, -65521, 7, -65520, 536870912, -65519, 536870912, -65518, 536870912, -65517, 536870912, 65535, 0, 0, 0, 1, 0, 2, 0, 3, 7, 4, 7, 5, 7, 6, 7, 7, 3, 8, 4, 9, 4, 10, 4, 11, 536870915, 12, 7, 13, 7, 14, 7, 15, 7, 16, 536870912, 17, 536870912, 18, 536870912, 19, 536870912, 131071, 0, 65536, 0, 65537, 0, 65538, 0, 65539, 7, 65540, 7, 65541, 7, 65542, 7, 65543, -1073741821, 65544, 1610612740, 65545, 1610612740, 65546, 1610612740, 65547, 1610612739, 65548, 7, 65549, 7, 65550, 7, 65551, 7, 65552, 536870912, 65553, 536870912, 65554, 536870912, 65555, 536870912, 196607, 0, 131072, 0, 131073, 0, 131074, 0, 131075, -1073741819, 131076, -1073741819, 131077, -1073741819, 131078, -1073741819, 131079, -1073741819, 131080, -1073741819, 131081, -1073741819, 131082, -1073741819, 131083, -1073741819, 131084, -1073741819, 131085, -1073741819, 131086, -1073741819, 131087, -1073741819, 131088, 536870912, 131089, 536870912, 131090, 536870912, 131091, 536870912, 262143, 0, 196608, 0, 196609, 0, 196610, 0, 196611, -1073741819, 196612, -1073741819, 196613, -1073741819, 196614, -1073741819, 196615, -1073741819, 196616, -1073741819, 196617, -1073741819, 196618, -1073741819, 196619, -1073741819, 196620, -1073741819, 196621, -1073741819, 196622, -1073741819, 196623, -1073741819, 196624, 536870912, 196625, 536870912, 196626, 536870912, 196627, 536870912, 327679, 0, 262144, 0, 262145, 0, 262146, 0, 262160, 536870912, 262161, 536870912, 262162, 536870912, 262163, 536870912, 393215, 0, 327680, 0, 327681, 0, 327682, 0, 327696, 536870912, 327697, 536870912, 327698, 536870912, 327699, 536870912, 458751, 0, 393216, 0, 393217, 0, 393218, 0, 393232, 536870912, 393233, 536870912, 393234, 536870912, 393235, 536870912, 524287, 0, 458752, 0, 458753, 0, 458754, 0, 458755, 7, 458756, 7, 458757, 7, 458758, 7, 458759, 7, 458760, 7, 458761, 7, 458762, 7, 458763, 7, 458764, 7, 458765, 7, 458766, 7, 458767, 7, 458768, 536870912, 458769, 536870912, 458770, 536870912, 458771, 536870912, 589823, 0, 524288, 0, 524289, 0, 524290, 0, 524291, 7, 524292, 7, 524293, 7, 524294, 7, 524295, 7, 524296, 7, 524297, 7, 524298, 7, 524299, 7, 524300, 7, 524301, 7, 524302, 7, 524303, 7, 524304, 536870912, 524305, 536870912, 524306, 536870912, 524307, 536870912, 655359, 0, 589824, 0, 589825, 0, 589826, 0, 589827, 7, 589828, 7, 589829, 7, 589830, 7, 589831, 7, 589832, 7, 589833, 7, 589834, 7, 589835, 7, 589836, 7, 589837, 7, 589838, 7, 589839, 7, 589840, 536870912, 589841, 536870912, 589842, 536870912, 589843, 536870912, 720895, 0, 655360, 0, 655361, 0, 655362, 2, 655363, 536870913, 655364, 536870913, 655365, 536870913, 655366, 536870913, 655367, 536870913, 655368, 536870913, 655369, 536870913, 655370, 536870913, 655371, 536870913, 655372, 536870913, 655373, 536870913, 655374, 536870913, 655375, 536870913, 655376, 536870914, 655377, 536870912, 655378, 536870912, 655379, 536870912, 786431, 0, 720896, 0, 720897, 2, 720898, 536870913, 720899, 536870913, 720900, 536870913, 720901, 536870913, 720902, 536870913, 720903, 536870913, 720904, 536870913, 720905, 536870913, 720906, 536870913, 720907, 536870913, 720908, 536870913, 720909, 536870913, 720910, 536870913, 720911, 536870913, 720912, 536870913, 720913, 536870914, 720914, 536870912, 720915, 536870912, 851967, 0, 786432, 2, 786433, 536870913, 786434, 536870913, 786435, 536870913, 786436, 536870913, 786437, 536870913, 786438, 536870913, 786439, 536870913, 786440, 536870913, 786441, 536870913, 786442, 536870913, 786443, 536870913, 786444, 536870913, 786445, 536870913, 786446, 536870913, 786447, 536870913, 786448, 536870913, 786449, 536870913, 786450, 536870914, 786451, 536870912 )

[node name="seats" type="TileMap" parent="background"]

transform/pos = Vector2( -4, 0 )
mode = 0
tile_set = ExtResource( 2 )
cell/size = Vector2( 32, 32 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( -1, 0, -65536, 0, -65535, 0, -65534, 0, -65519, 536870912, -65518, 536870912, -65517, 536870912, 65535, 0, 0, 0, 1, 0, 2, 0, 17, 536870912, 18, 536870912, 19, 536870912, 131071, 0, 65536, 0, 65537, 0, 65538, 0, 65539, -1073741819, 65540, -1073741819, 65541, -1073741819, 65542, -1073741819, 65543, -1073741821, 65544, 1610612740, 65545, 1610612740, 65546, 1610612740, 65547, 1610612739, 65548, -1073741819, 65549, -1073741819, 65550, -1073741819, 65551, -1073741819, 65552, 536870912, 65553, 536870912, 65554, 536870912, 65555, 536870912, 196607, 0, 131072, 0, 131073, 0, 131074, 0, 131075, -1073741819, 131076, -1073741819, 131077, -1073741819, 131078, -1073741819, 131079, -1073741819, 131080, -1073741819, 131081, -1073741819, 131082, -1073741819, 131083, -1073741819, 131084, -1073741819, 131085, -1073741819, 131086, -1073741819, 131087, -1073741819, 131088, 536870912, 131089, 536870912, 131090, 536870912, 131091, 536870912, 262143, 0, 196608, 0, 196609, 0, 196610, 0, 196611, 6, 196612, 6, 196613, 6, 196614, 6, 196615, 6, 196616, 6, 196617, 6, 196618, 6, 196619, 6, 196620, 6, 196621, 6, 196622, 6, 196623, 6, 196624, 536870912, 196625, 536870912, 196626, 536870912, 196627, 536870912, 327679, 0, 262144, 0, 262145, 0, 262146, 0, 262147, 6, 262148, 6, 262149, 6, 262150, 6, 262151, 6, 262152, 6, 262153, 6, 262154, 6, 262155, 6, 262156, 6, 262157, 6, 262158, 6, 262159, 6, 262160, 536870912, 262161, 536870912, 262162, 536870912, 262163, 536870912, 393215, 0, 327680, 0, 327681, 0, 327682, 0, 327683, 6, 327684, 6, 327685, 6, 327686, 6, 327687, 6, 327688, 6, 327689, 6, 327690, 6, 327691, 6, 327692, 6, 327693, 6, 327694, 6, 327695, 6, 327696, 536870912, 327697, 536870912, 327698, 536870912, 327699, 536870912, 458751, 0, 393216, 0, 393217, 0, 393218, 0, 393219, 6, 393220, 6, 393221, 6, 393222, 6, 393223, 6, 393224, 6, 393225, 6, 393226, 6, 393227, 6, 393228, 6, 393229, 6, 393230, 6, 393231, 6, 393232, 536870912, 393233, 536870912, 393234, 536870912, 393235, 536870912, 524287, 0, 458752, 0, 458753, 0, 458754, 0, 458768, 536870912, 458769, 536870912, 458770, 536870912, 458771, 536870912, 589823, 0, 524288, 0, 524289, 0, 524290, 0, 524304, 536870912, 524305, 536870912, 524306, 536870912, 524307, 536870912, 655359, 0, 589824, 0, 589825, 0, 589840, 536870912, 589841, 536870912, 589842, 536870912, 589843, 536870912, 720895, 0, 655360, 0, 655361, 0, 655362, 2, 655363, 536870913, 655364, 536870913, 655365, 536870913, 655366, 536870913, 655367, 536870913, 655368, 536870913, 655369, 536870913, 655370, 536870913, 655371, 536870913, 655372, 536870913, 655373, 536870913, 655374, 536870913, 655375, 536870913, 655376, 536870914, 655377, 536870912, 655378, 536870912, 655379, 536870912, 786431, 0, 720896, 0, 720897, 2, 720898, 536870913, 720899, 536870913, 720900, 536870913, 720901, 536870913, 720902, 536870913, 720903, 536870913, 720904, 536870913, 720905, 536870913, 720906, 536870913, 720907, 536870913, 720908, 536870913, 720909, 536870913, 720910, 536870913, 720911, 536870913, 720912, 536870913, 720913, 536870914, 720914, 536870912, 720915, 536870912, 851967, 0, 786432, 2, 786433, 536870913, 786434, 536870913, 786435, 536870913, 786436, 536870913, 786437, 536870913, 786438, 536870913, 786439, 536870913, 786440, 536870913, 786441, 536870913, 786442, 536870913, 786443, 536870913, 786444, 536870913, 786445, 536870913, 786446, 536870913, 786447, 536870913, 786448, 536870913, 786449, 536870913, 786450, 536870914, 786451, 536870912 )

[node name="field" type="Node" parent="."]

process/pause_mode = 1
editor/display_folded = true

[node name="net" type="StaticBody2D" parent="field"]

editor/display_folded = true
transform/pos = Vector2( 300, 340 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="sprite" type="Sprite" parent="field/net"]

texture = ExtResource( 3 )
region = true
region_rect = Rect2( 0, 0, 16, 128 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="field/net"]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="boundary" type="Node2D" parent="field"]

[node name="StaticBody2D" type="StaticBody2D" parent="field/boundary"]

input/pickable = false
shapes/0/shape = SubResource( 11 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 12 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/1/trigger = false
shapes/2/shape = SubResource( 13 )
shapes/2/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/2/trigger = false
shapes/3/shape = SubResource( 5 )
shapes/3/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/3/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="field/boundary/StaticBody2D"]

build_mode = 0
polygon = Vector2Array( 0, -140, 0, 400, 600, 400, 600, -140, 630, -140, 630, 420, -30, 420, -30, -140 )
shape_range = Vector2( 0, 2 )
trigger = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="field/boundary/StaticBody2D"]

shape = SubResource( 5 )
trigger = false
_update_shape_index = 3

[node name="score_l" type="Area2D" parent="field"]

input/pickable = true
shapes/0/shape = SubResource( 6 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="field/score_l"]

build_mode = 0
polygon = Vector2Array( 300, 380, 600, 380, 600, 400, 300, 400 )
shape_range = Vector2( 0, 0 )
trigger = false

[node name="score_r" type="Area2D" parent="field"]

input/pickable = true
shapes/0/shape = SubResource( 7 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="field/score_r"]

build_mode = 0
polygon = Vector2Array( 0, 380, 300, 380, 300, 400, 0, 400 )
shape_range = Vector2( 0, 0 )
trigger = false

[node name="racket_l" parent="." instance=ExtResource( 4 )]

process/pause_mode = 1
transform/pos = Vector2( 120, 340 )
lefthanded = true
AI = true

[node name="racket_r" parent="." instance=ExtResource( 4 )]

process/pause_mode = 1
transform/pos = Vector2( 480, 340 )

[node name="hud" type="CanvasLayer" parent="."]

process/pause_mode = 2
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="score" type="Label" parent="hud"]

process/pause_mode = 2
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 240.0
margin/top = 20.0
margin/right = 360.0
margin/bottom = 60.0
custom_fonts/font = SubResource( 8 )
text = "0 - 0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="r_r" type="TouchScreenButton" parent="hud"]

transform/pos = Vector2( 600, 320 )
transform/scale = Vector2( -2, 2 )
normal = ExtResource( 6 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = "ui_right"
visibility_mode = 1

[node name="r_l" type="TouchScreenButton" parent="hud"]

transform/pos = Vector2( 420, 320 )
transform/scale = Vector2( 2, 2 )
normal = ExtResource( 6 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = "ui_left"
visibility_mode = 1

[node name="r_u" type="TouchScreenButton" parent="hud"]

transform/pos = Vector2( 540, 320 )
transform/rot = -90.0
transform/scale = Vector2( 2, 2 )
normal = ExtResource( 6 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = "ui_up"
visibility_mode = 1

[node name="win_particle" type="Particles2D" parent="hud"]

transform/pos = Vector2( 300, 40 )
config/amount = 32
config/lifetime = 6.0
config/time_scale = 4.0
config/emitting = false
config/process_mode = 1
config/explosiveness = 0.0
config/texture = ExtResource( 7 )
params/direction = 0.0
params/spread = 150.0
params/linear_velocity = 80.0
params/spin_velocity = 2.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 9.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 0.75
params/final_size = 0.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0

[node name="win_timer" type="Timer" parent="hud"]

process_mode = 1
wait_time = 4.0
one_shot = true
autostart = false

[node name="l_r" type="TouchScreenButton" parent="hud"]

transform/pos = Vector2( 180, 320 )
transform/scale = Vector2( -2, 2 )
normal = ExtResource( 6 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = "lp_right"
visibility_mode = 1

[node name="l_l" type="TouchScreenButton" parent="hud"]

transform/pos = Vector2( 0, 320 )
transform/scale = Vector2( 2, 2 )
normal = ExtResource( 6 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = "lp_left"
visibility_mode = 1

[node name="l_u" type="TouchScreenButton" parent="hud"]

transform/pos = Vector2( 120, 320 )
transform/rot = 270.0
transform/scale = Vector2( 2, 2 )
normal = ExtResource( 6 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = "lp_up"
visibility_mode = 1

[node name="sounds" type="SamplePlayer2D" parent="."]

params/volume_db = 0.0
params/pitch_scale = 1.0
params/attenuation/min_distance = 1.0
params/attenuation/max_distance = 2048.0
params/attenuation/distance_exp = 1.0
config/polyphony = 1
config/samples = SubResource( 9 )
config/pitch_random = 0.0

[node name="StreamPlayer" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 11 )
stream/play = true
stream/loop = true
stream/volume_db = 0.0
stream/autoplay = true
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="ball" type="RigidBody2D" parent="."]

process/pause_mode = 1
editor/display_folded = true
transform/pos = Vector2( 481, 120 )
input/pickable = false
shapes/0/shape = SubResource( 10 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
mode = 0
mass = 8.0
friction = 1.0
bounce = 1.0
gravity_scale = 2.5
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0

[node name="sprite" type="Sprite" parent="ball"]

texture = ExtResource( 7 )

[node name="ball_shape" type="CollisionShape2D" parent="ball"]

shape = SubResource( 10 )
trigger = false
_update_shape_index = 0

[connection signal="body_enter" from="field/score_l" to="." method="_on_score_l_body_enter"]

[connection signal="body_enter" from="field/score_r" to="." method="_on_score_r_body_enter"]

[connection signal="slam" from="racket_l" to="." method="_on_racket_l_slam"]

[connection signal="slam" from="racket_r" to="." method="_on_racket_r_slam"]

[connection signal="timeout" from="hud/win_timer" to="." method="_on_win_timer_timeout"]


